--- a/Multivac/app/src/main/res/menu/menu_main.xml
+++ b/Multivac/app/src/main/res/menu/menu_main.xml
@@ -1,6 +1,15 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
+    <item android:id="@+id/action_acts"
+        android:title="Actions"
+        app:showAsAction="ifRoom" />
+    <item android:id="@+id/action_events"
+        android:title="Events"
+        app:showAsAction="ifRoom" />
+    <item android:id="@+id/action_actevents"
+        android:title="Events -> Actions"
+        app:showAsAction="ifRoom" />
     <item android:id="@+id/action_settings" android:title="@string/action_settings"
         android:orderInCategory="100" app:showAsAction="never" />
 </menu>
