--- a/Multivac/app/src/main/res/menu/menu_main.xml
+++ b/Multivac/app/src/main/res/menu/menu_main.xml
@@ -7,8 +7,11 @@
     <item android:id="@+id/action_events"
         android:title="Events"
         app:showAsAction="ifRoom" />
-    <item android:id="@+id/action_actevents"
+    <item android:id="@+id/action_eventacts"
         android:title="Events -> Actions"
+        app:showAsAction="ifRoom" />
+    <item android:id="@+id/action_devices"
+        android:title="Devices"
         app:showAsAction="ifRoom" />
     <item android:id="@+id/action_settings" android:title="@string/action_settings"
         android:orderInCategory="100" app:showAsAction="never" />
