--- a/Multivac/app/src/main/res/layout/dialog_add_act.xml
+++ b/Multivac/app/src/main/res/layout/dialog_add_act.xml
@@ -23,4 +23,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Data"/>
+    <EditText
+        android:id="@+id/description"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Description"/>
 </LinearLayout>
