--- a/Multivac/app/src/main/res/layout/fragment_event_act_list.xml
+++ b/Multivac/app/src/main/res/layout/fragment_event_act_list.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
@@ -10,18 +10,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
     </ListView>
-    <LinearLayout
-        android:layout_width="match_parent"
+    <ImageView
+        android:id="@+id/eventact_add"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/eventact_add">
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@android:drawable/ic_menu_add"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:text="Add Action Event Mapping"/>
-    </LinearLayout>
-</LinearLayout>
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginBottom="20dp"
+        android:layout_marginRight="20dp"
+        android:src="@android:drawable/ic_menu_add"/>
+</RelativeLayout>
