--- a/Multivac/app/src/main/res/layout/fragment_event_act_list.xml
+++ b/Multivac/app/src/main/res/layout/fragment_event_act_list.xml
@@ -12,11 +12,11 @@
     </ListView>
     <ImageView
         android:id="@+id/eventact_add"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_marginBottom="20dp"
         android:layout_marginRight="20dp"
-        android:src="@android:drawable/ic_menu_add"/>
+        android:src="@drawable/add_icon"/>
 </RelativeLayout>
